fix some styling stuff that cropped up, correct the numbers on the slice pipe

--- a/src/app/smaller-featured/smaller-featured.component.scss
+++ b/src/app/smaller-featured/smaller-featured.component.scss
@@ -8,6 +8,10 @@
     font-size:1.188rem;
     border-bottom: 1px solid #c9c9c9;
   }
+  img{
+    width: 360px;
+    height: 140px;
+  }
   p{
     font-size:.9375rem;
   }
